Mon Feb 21 01:15:28 CET 2000  Sven Neumann <sven@gimp.org>

	* .cvsignore: added a few files that shouldn't be in CVS

Mon Feb 21 02:05:14 CET 2000  Marc Lehmann <pcg@goof.com>

	* de.po: Updated translation.

Sat Feb 19 23:39:03 CET 2000  Marc Lehmann <pcg@goof.com>

	* update.sh: changed to _not_ update the .po files anymore
        (as suggested by sven).

Thu Feb 17 00:36:51 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Mon Feb 14 21:23:46 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Fri Feb 11 12:13:41 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Mon Feb  7 13:27:30 CET 2000  Sven Neumann <sven@gimp.org>

	* it.po: Updates from Daniele Medri <madrid@linux.it>

Fri Feb  4 20:40:33 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Fri Jan 28 19:16:43 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Wed Jan 19 16:12:08 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Sun Jan 16 18:08:33 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Completed translation.

Sat Jan 15 12:46:03 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Tue Jan 11 21:00:11 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2000-01-08
	* ru.po: Added Russian translation from 
	Valek Filippov <frob@df.ru>

Fri Jan  7 19:26:06 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

1999-12-08  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Added Norwegian translation.
	
Tue Dec  7 15:16:03 CET 1999  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

Fri Dec  3 22:52:38 CET 1999  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Added translation.
